fixed glitch: the white top-border I set to remedy a glitch in the pdf output, triggered a page-break in v0.4. I solved it by moving the border from the parent figure to the child img.

--- a/src/pagedjs/interface_v0.4.css
+++ b/src/pagedjs/interface_v0.4.css
@@ -24,7 +24,7 @@
         flex: 0;
         flex-wrap: wrap;
         margin: 0 auto;
-        padding-bottom: 2em;
+        padding-bottom: 4em;
     }
 
     .pagedjs_page {
